@@ -6,6 +6,7 @@ import com.coyjiv.isocial.domain.Like;
 import com.coyjiv.isocial.domain.LikeableEntity;
 import com.coyjiv.isocial.domain.NotificationEvent;
 import com.coyjiv.isocial.dto.respone.like.LikeInfoResponseDto;
+import com.coyjiv.isocial.dto.respone.page.PageWrapper;
 import com.coyjiv.isocial.dto.respone.user.UserProfileResponseDto;
 import com.coyjiv.isocial.dto.respone.user.UserSearchResponseDto;
 import com.coyjiv.isocial.exceptions.EntityNotFoundException;
@@ -13,6 +14,7 @@ import com.coyjiv.isocial.service.notifications.INotificationService;
 import com.coyjiv.isocial.service.user.IUserService;
 import com.coyjiv.isocial.service.websocket.IWebsocketService;
 import com.coyjiv.isocial.transfer.like.LikeDtoResponseMapper;
+import io.sentry.Sentry;
 import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.Page;
@@ -71,13 +73,15 @@ public class LikeService implements ILikeService {
       throw new EntityNotFoundException("Entity id is required");
     }
     Pageable topTen = PageRequest.of(0, 10);
+
+
     return likeRepository.getRecentLikes(entityId, entityType, topTen);
   }
 
   @Transactional
   @Override
-  public List<UserProfileResponseDto> getUsersWhoLikedEntity(Long entityId, LikeableEntity entityType)
-    throws EntityNotFoundException {
+  public PageWrapper<UserProfileResponseDto> getUsersWhoLikedEntity(Long entityId, LikeableEntity entityType)
+          throws EntityNotFoundException {
     if (entityType == null) {
       throw new EntityNotFoundException("Entity type is required");
     }
@@ -86,19 +90,25 @@ public class LikeService implements ILikeService {
     }
     int pageSize = 1000; // Example large enough value, adjust based on expected data size
 
-    Page<Like> page = likeRepository.findByEntityIdAndEntityType(entityId, entityType, PageRequest.of(0, pageSize));
+    Page<Like> page = likeRepository.findByEntityIdAndEntityType(entityId, entityType,
+            PageRequest.of(0, pageSize));
     List<Like> likes = page.getContent();
 
     // Convert likes to UserProfileResponseDto, handling possible EntityNotFoundException
-    return likes.stream().map(like -> {
+    List<UserProfileResponseDto> dtos = likes.stream().map(like -> {
       try {
         return userService.findActiveById(like.getUserId());
       } catch (EntityNotFoundException e) {
+        Sentry.captureException(e);
         e.printStackTrace();
         return null;
       }
     }).filter(Objects::nonNull) // Remove nulls in case of not found users
-      .distinct().collect(Collectors.toList());
+            .distinct().toList();
+
+    boolean hasNext = page.hasNext();
+
+    return new PageWrapper<>(dtos, hasNext);
   }
 
 
