@@ -6,6 +6,7 @@ import com.coyjiv.isocial.dao.LikeRepository;
 import com.coyjiv.isocial.dao.FriendRepository;
 import com.coyjiv.isocial.dao.PostRepository;
 import com.coyjiv.isocial.dao.UserRepository;
+import com.coyjiv.isocial.domain.AbstractEntity;
 import com.coyjiv.isocial.domain.Friend;
 import com.coyjiv.isocial.domain.Post;
 import com.coyjiv.isocial.domain.UserFriendStatus;
@@ -25,6 +26,7 @@ import com.coyjiv.isocial.service.subscriber.ListSubscriberService;
 import com.coyjiv.isocial.transfer.post.PostRequestMapper;
 import com.coyjiv.isocial.transfer.post.PostResponseMapper;
 import com.coyjiv.isocial.transfer.post.RePostRequestMapper;
+import io.sentry.Sentry;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
@@ -44,6 +46,8 @@ import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 import static com.coyjiv.isocial.domain.LikeableEntity.POST;
 
@@ -67,10 +71,15 @@ public class PostService implements IPostService {
 
   @Transactional(readOnly = true)
   @Override
-  public List<Post> findAllActive(int page, int size) {
+  public PageWrapper<Post> findAllActive(int page, int size) {
     Sort sort = Sort.by(new Sort.Order(Sort.Direction.ASC, "creationDate"));
     Pageable pageable = PageRequest.of(page, size, sort);
-    return postRepository.findAllActive(pageable);
+
+    Page<Post> posts = postRepository.findAllActive(pageable);
+
+    boolean hasNext =  posts.hasNext();
+
+    return new PageWrapper<>(posts.toList(), hasNext);
   }
 
   @Override
@@ -82,7 +91,8 @@ public class PostService implements IPostService {
   @Override
   public PageWrapper<PostResponseDto> findFavoritePosts(int page, int size) {
     List<FavoriteResponseDto> favorites =
-            favoriteService.findActiveBySelectorId(page, size, emailPasswordAuthProvider.getAuthenticationPrincipal());
+            favoriteService.findActiveBySelectorId(page, size, emailPasswordAuthProvider.getAuthenticationPrincipal())
+                    .getContent();
     if (favorites.isEmpty()) {
       return new PageWrapper<>(List.of(), false);
     } else {
@@ -173,6 +183,7 @@ public class PostService implements IPostService {
         try {
           favoriteService.delete(entry.getId(), false);
         } catch (IllegalAccessException | RequestValidationException e) {
+          Sentry.captureException(e);
           throw new RuntimeException(e);
         }
       });
@@ -197,6 +208,7 @@ public class PostService implements IPostService {
           try {
             favoriteService.delete(en.getId(), false);
           } catch (IllegalAccessException | RequestValidationException e) {
+            Sentry.captureException(e);
             throw new RuntimeException(e);
           }
         });
@@ -243,40 +255,38 @@ public class PostService implements IPostService {
   @Transactional(readOnly = true)
   @Override
   public PageWrapper<PostResponseDto> getRecommendation(int page, int size) throws EntityNotFoundException {
-    List<Friend> friends = friendRepository.findAllByRequesterIdOrAddresserIdAndStatus(
-            emailPasswordAuthProvider.getAuthenticationPrincipal(),
-            emailPasswordAuthProvider.getAuthenticationPrincipal(), UserFriendStatus.FRIEND);
-    List<UserProfileResponseDto> subscriptions = listSubscriberService.getSubscriptions();
+    Long principal = emailPasswordAuthProvider.getAuthenticationPrincipal();
 
-    LocalDateTime now = LocalDateTime.now();
-    LocalDateTime time = now.minus(1, ChronoUnit.DAYS);
-    ZoneId zoneId = ZoneId.systemDefault();
-    Date date = Date.from(time.atZone(zoneId).toInstant());
+    List<Long> friendsIds = friendRepository.findAllByUserId(principal)
+      .stream().map(f -> principal ==  f.getAddresser().getId()
+        ? f.getRequester().getId()
+        : f.getAddresser().getId()).toList();
 
-    List<Long> ids = new ArrayList<>();
+    List<Long> subscriptionsIds = listSubscriberService.getSubscriptions()
+      .stream().map(UserProfileResponseDto::getId).toList();
+
+    List<Long> ids = Stream.concat(friendsIds.stream(), subscriptionsIds.stream())
+      .distinct()
+      .filter(id -> !id.equals(principal))
+      .collect(Collectors.toList());
+
+    System.out.println("recommendation user ids");
+    ids.forEach(System.out::println);
 
     Sort sort = Sort.by(Sort.Direction.DESC, "creationDate").and(Sort.by(Sort.Direction.ASC, "id"));
     Pageable pageable = PageRequest.of(page, size, sort);
 
+    Page<Post> p = postRepository.findRecommendations(ids, pageable);
 
-    for (Friend f : friends) {
-      if (Objects.equals(f.getAddresser().getId(), emailPasswordAuthProvider.getAuthenticationPrincipal())) {
-        ids.add(f.getRequester().getId());
-      } else if (Objects.equals(f.getRequester().getId(), emailPasswordAuthProvider.getAuthenticationPrincipal())) {
-        ids.add(f.getAddresser().getId());
-      }
-    }
-
-    for (UserProfileResponseDto s : subscriptions) {
-      ids.add(s.getId());
-    }
-
-    Page<Post> p = postRepository.findRecommendations(ids, date, pageable);
-    Collections.shuffle(p.getContent());
-    Set<Post> posts = new HashSet<>(p.getContent());
+    List<Post> shuffledPosts = new ArrayList<>(p.getContent());
+    Collections.shuffle(shuffledPosts);
 
     boolean hasNext = p.hasNext();
-    List<PostResponseDto> dtos = posts.stream().map(postResponseMapper::convertToDto).toList();
+
+    List<PostResponseDto> dtos = shuffledPosts.stream()
+      .map(postResponseMapper::convertToDto)
+      .collect(Collectors.toList());
+
     return new PageWrapper<>(dtos, hasNext);
   }
 }
